update ide plugin desc, add version record and FAQ.

--- a/doc/02.使用介绍/01.JetBrains IDE插件/00.jetbrains-ide-plugin.md
+++ b/doc/02.使用介绍/01.JetBrains IDE插件/00.jetbrains-ide-plugin.md
@@ -40,6 +40,8 @@ permalink: /integrations/murphysec-jetbrains-plugin/
 
 插件官方地址：[https://plugins.jetbrains.com/plugin/18274-murphysec-code-scan](https://plugins.jetbrains.com/plugin/18274-murphysec-code-scan)
 
+历史版本：[查看版本记录](/integrations/murphysec-jetbrains-plugin/versions/)
+
 ## 安装插件
 - 打开 IDE 并进入插件市场
 - 在插件市场中搜索 “Murphysec Code Scan”，查看详情并安装
@@ -95,4 +97,11 @@ permalink: /integrations/murphysec-jetbrains-plugin/
 
 ![](https://murphysec-doc-1257309290.cos.ap-beijing.myqcloud.com/2022/03/18/16475902179712.jpg)
 
+
+## 常见问题
+
+### 1. 将插件从 sidebar 移除了，我要怎么检测？
+
+- 点击菜单栏上的 `View` -> `Tool Windows` -> `MurphySec` ，插件将会重新出现在 sidebar 上
+![](https://murphysec-doc-1257309290.cos.ap-beijing.myqcloud.com/2022/04/15/16499953394460.jpg)
 
